--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
-  "name": "atoy",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "toy",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon ./bin/www"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
+    "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
-    "ejs": "^2.7.2",
-    "express": "^4.17.1",
+    "date-utils": "^1.2.21",
+    "debug": "~2.6.9",
+    "ejs": "~2.6.1",
+    "express": "~4.16.1",
     "express-session": "^1.17.0",
-    "morgan": "^1.9.1",
+    "http-errors": "~1.6.3",
+    "morgan": "~1.9.1",
     "multer": "^1.4.2",
-    "mysql": "^2.17.1",
-    "path": "^0.12.7",
-    "router": "^1.3.3"
+    "mysql": "^2.17.1"
   }
 }
