--- a/package.json
+++ b/package.json
@@ -6,16 +6,18 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.4",
+    "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
+    "data-utils": "0.0.2",
     "date-utils": "^1.2.21",
-    "debug": "~2.6.9",
-    "ejs": "~2.6.1",
-    "express": "~4.16.1",
+    "debug": "^2.6.9",
+    "ejs": "^2.6.2",
+    "express": "^4.16.4",
     "express-session": "^1.17.0",
-    "http-errors": "~1.6.3",
-    "morgan": "~1.9.1",
+    "http-errors": "^1.6.3",
+    "morgan": "^1.9.1",
     "multer": "^1.4.2",
-    "mysql": "^2.17.1"
+    "mysql": "^2.17.1",
+    "nodemon": "^2.0.0"
   }
 }
